# roadtrip-skill

./: .gitignore  .lycheeignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DEVELOPMENT.md  GEMINI.md  INSTALL.md  LICENSE  README.md  README.zh.md  SKILL.md  examples.md  pyproject.toml  reference.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci-cd.yml  gemini-dispatch.yml  pages.yml
assets/: generate.py  preview-chicago.html  preview-pnw.html  preview-tahoe.html  preview.html  template.html  tripData.chicago.json  tripData.example.json  tripData.pnw.json  tripData.tahoe.json
commands/: roadtrip.md
docs/: index.html  robots.txt  sitemap.xml
docs/trips/: seattle-vancouver-whistler-ev-road-trip-4-days.html  southwest-national-parks-road-trip-7-days.html  sunnyvale-lake-tahoe-road-trip-3-days.html
examples/: backfill_demo.py
mcp_server/: README.md  __init__.py  server.py
routes/great-river-road/: index.html
scripts/: build_site.py  capture_demo.js  helper.py  planner.py  routes.py
tests/: conftest.py  test_border_client.py  test_budget_recompute.py  test_charging_client.py  test_customs_client.py  test_fuel_backfill.py  test_generate.py  test_helper.py  test_json_robustness.py  test_mcp_server.py  test_parks_client.py  test_places_client.py  test_planner.py  test_routing_client.py  test_trip_backfills.py  test_trip_edit.py  test_weather_advisories.py  test_weather_sources.py
tests/integration/: test_generator_pipeline.py
tools/: __init__.py  border_client.py  charging_client.py  customs_client.py  fuel_client.py  lodging_client.py  parks_client.py  places_client.py  routing_client.py  weather_client.py  web_search.py
